@@ -38,7 +38,8 @@ one:
 	  test -z "$$unparsed" || { echo "$$unparsed" >&2; exit 1; }; \
 	test -z "$(profopt)" || $(profcmd)
 
-# Prepare data for crossref.
+#  Deal with crossref.
+# 
 # This directory is where we target all automated work.
 cr_temp = crossref/rpi
 #
@@ -49,24 +50,43 @@ cr1:
 	# therefore we should clean out everything in $(cr_temp) to start.
 	rm -f $(cr_temp)/*.rpi $(cr_temp)/*.bbl $(cr_temp)/*.html
 	#
-	# process the capsule file, generating .rpi.
+	# process the capsule file, generating .rpi files
+	# and intermediate landing pages.
 	$(MAKE) more_options=--crossref=$(cr_temp) one
 	#
-	# the .rpi and .html files should never need to be hand-edited,
+	# the .rpi files should never need to be hand-edited,
 	# so just overwrite:
-	cp -pf $(cr_temp)/*.rpi $(cr_temp)/*.html $(cr_process)/
+	cp -pf $(cr_temp)/*.rpi $(cr_process)/
 	#
+	# copy in the bbl and abs files from the tub issue source dir.
 	./cr-copy-bbl-abs tb$(testiss)capsule.txt $(cr_temp)/
+	#
 	# but only copy the bbl's into process/ once,
-	# since we need to hand-edit them.
+	# since we may need to hand-edit those.
 	yes n | cp -ip $(cr_temp)/*.bbl $(cr_process)/
 	#
-	# make the crossref output.xml file.
+	# make the crossref output.xml file; uses the rpi and bbl files.
 	$(MAKE) -C crossref
 	#
-	# from the crossref xml, fix up the landing pages.
-	#./cr-landing-bbl-abs $(cr_temp) $(cr_process)/output.xml
+	# update the landing pages with the bbl text from the crossref xml,
+	# and the abstracts from the files copied into temp.
+	./cr-landing-bbl-abs $(cr_process)/output.xml $(cr_temp)
+	#
+	# the landing pages should be final now, and not need any
+	# hand-editing, so copy into process dir.
+	cp -pf $(cr_temp)/*.html $(cr_process)/
+	#
+	# qqq upload to test crossref
+	# qqq install landing files on web site
+	# qqq upload to real crossref
+	# qqq archive uploaded files in crossref/uploaded
 
+crbat:
+	cp -pf $(cr_process)/tb*.html $(cr_temp)
+	./cr-landing-bbl-abs $(cr_process)/output.xml $(cr_temp)
+	tail -n 15 $(cr_temp)/tb129talbot*.html
+	
+# 
 out = contents*.html
 all:
 	perl -cw captub && date
